Check-Email public endpoint